# pytorch-prev

./: .envrc  Pipfile  pyproject.toml
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
class6多维特征处理/: multiplyFeature.py
class7加载数据集/: CRC-5种机器学习.ipynb  Loader copy.py  Loader.py  gbdt.py  health.py  health5.py  healthgpt.py  ill.py  illipy.ipynb  oil.py
class8多分类问题/: multiplyTest.py
data/: .~IBD血液原始数据_副本.xlsx  IBD血液原始数据_副本.xlsx  oil.csv  井筒减产停产数据汇总.xlsx  尿液IBD0204(1).xlsx  尿液IBD0204.xlsx
qlib/: qlib.py
